--- a/lambda/hello-world/package.json
+++ b/lambda/hello-world/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "check-word": "^1.1.0"
+    "is-word": "^1.0.4"
   },
   "scripts": {
     "test": "mocha tests/unit/"
