--- a/lambda/template.yaml
+++ b/lambda/template.yaml
@@ -20,10 +20,10 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        HelloWorld:
+        NumberGenerator:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello
+            Path: /number
             Method: get
 
 Outputs:
